# temporal-distributed-calculator

./: .gitattributes  .gitignore  DESIGN.md  Dockerfile  LLM_USAGE.md  README.md  pyproject.toml
k8s/: hpa.yaml  namespace.yaml  operator-workers.yaml  temporal-dev-server.yaml  workflow-worker.yaml
scripts/: cleanup.sh  create-kind-cluster.sh  deploy.sh  enable-autoscaling.sh  stress-test.sh  trigger-calculation.sh
src/calculator/: __init__.py  activities.py  client.py  evaluator.py  operator_worker.py  parser.py  stress.py  task_queues.py  workflow_worker.py  workflows.py
src/worker_sdk/: __init__.py  config.py  observability.py  runner.py
tests/: test_parser.py
